--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
             //modalImg.src = this.src;
             modalImg.src = "images/News/1.jpg";
             caption_h2Text.innerHTML = "賽車座椅 + 方向盤";
-            caption_pText.innerHTML = "$79,989";
+            //caption_pText.innerHTML = "$79,989";
         }
 
         // Get the <span> element that closes the modal
@@ -602,7 +602,7 @@
             //modalImg.src = this.src;
             modalImg.src = "images/News/2.jpg";
             caption_h2Text.innerHTML = "賽車遊戲全套";
-            caption_pText.innerHTML = "$228,000";
+            //caption_pText.innerHTML = "$228,000";
         }
 
         // Get the <span> element that closes the modal
@@ -630,7 +630,7 @@
             //modalImg.src = this.src;
             modalImg.src = "images/News/3.jpg";
             caption_h2Text.innerHTML = "新款方向盤 & 油門踏板";
-            caption_pText.innerHTML = "$6,990";
+            //caption_pText.innerHTML = "$6,990";
         }
 
 		// Get the <span> element that closes the modal
@@ -658,7 +658,7 @@
             //modalImg.src = this.src;
             modalImg.src = "images/News/4.jpg";
             caption_h2Text.innerHTML = "Switch Lite";
-            caption_pText.innerHTML = "$8,190";
+            //caption_pText.innerHTML = "$8,190";
         }
 
         // Get the <span> element that closes the modal
@@ -687,7 +687,7 @@
             //modalImg.src = this.src;
             modalImg.src = "images/News/4.jpg";
             caption_h2Text.innerHTML = "Switch 全套";
-            caption_pText.innerHTML = "$11,090";
+            //caption_pText.innerHTML = "$11,090";
         }
 
         // Get the <span> element that closes the modal
@@ -715,7 +715,7 @@
             //modalImg.src = this.src;
             modalImg.src = "images/News/4.jpg";
             caption_h2Text.innerHTML = "PS4 Pro";
-            caption_pText.innerHTML = "$19,999";
+            //caption_pText.innerHTML = "$19,999";
         }
 
         // Get the <span> element that closes the modal
