--- a/index.html
+++ b/index.html
@@ -114,15 +114,7 @@
         <div class="row">
           <div class="col-lg-9 z-index-2 border-radius-xl mx-auto py-3">
             <div class="row">
-              <div class="col-md-4 position-relative">
-                <div class="p-3 text-center">
-                  <h1 class="text-gradient text-primary"><span id="state1" countTo="100">0</span>+</h1>
-                  <h5 class="mt-3">投資人數量</h5>
-                  <p class="text-sm"></p>
-                </div>
-                <hr class="vertical dark">
-              </div>
-              <div class="col-md-4 position-relative">
+              <div class="col-md-6 position-relative">
                 <div class="p-3 text-center">
                   <h1 class="text-gradient text-primary"> <span id="state2" countTo="50">0</span>+</h1>
                   <h5 class="mt-3">主流貨幣兌換</h5>
@@ -130,7 +122,7 @@
                 </div>
                 <hr class="vertical dark">
               </div>
-              <div class="col-md-4">
+              <div class="col-md-6">
                 <div class="p-3 text-center">
                   <h1 class="text-gradient text-primary"> <span id="state3" countTo="1000">0</span>+</h1>
                   <h5 class="mt-3">服務客戶人數</h5>
@@ -200,7 +192,7 @@
                       class="text-dark font-weight-normal">OTC(場外交易)是什麼？美國場外交易市場有哪些？交易安全嗎？</a>
                   </h3>
                   <p>
-                    全小鎮都在玩！一款「邊玩邊賺」遊戲，如何幫菲律賓窮戶度過疫情失業？ | 商周.com | LINE TODAY
+                    OTC(場外交易)是什麼？美國場外交易市場有哪些？交易安全嗎？
                   </p>
                 </div>
               </div>
@@ -226,7 +218,7 @@
           </div>
           <div class="col-lg-4 ms-auto mt-lg-0 mt-4" style="overflow: hidden;">
           <!--<div class="col-md-4 col-6 mx-lg-0 mx-auto px-lg-0 px-md-0 my-auto">-->
-            <img class="max-width-400 border-radius-lg shadow-lg" src="assets/img/Coinsha2.jpg">
+            <img style="width: 80%; left: 10%; position: relative;" class="max-width-400 border-radius-lg shadow-lg" src="assets/img/Coinsha2.jpg">
           </div>
         </div>
       </div>
@@ -479,7 +471,7 @@
               <div class="ms-4">
                 <h4>Email</h4>
                 <p>
-                  coinsha@gmail.com
+                  coinsha.service@gmail.com
                 </p>
               </div>
             </div>
@@ -516,7 +508,7 @@
             </div>
             <div class="p-3 info-horizontal d-flex">
               <div class="icon me-3 mt-1">
-                <a href="https://www.youtube.com/">
+                <a href="https://youtube.com/channel/UCq8OV-lVnGOCFXiH24wFhBg">
                   <img style="height: 50px;width: 50px;max-width: max-content;" src="assets/img/youtube.png"
                     alt="img-blur-shadow" class="img-fluid shadow border-radius-lg">
                 </a>
@@ -582,7 +574,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link pe-1" href="https://www.youtube.com/"
+                <a class="nav-link pe-1" href="https://youtube.com/channel/UCq8OV-lVnGOCFXiH24wFhBg"
                   target="_blank">
                   <i class="fab fa-youtube text-lg opacity-8"></i>
                 </a>
