--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               </div>
               <div class="col-md-6">
                 <div class="p-3 text-center">
-                  <h1 class="text-gradient text-primary"> <span id="state3" countTo="1000">0</span>+</h1>
+                  <h1 class="text-gradient text-primary"> <span id="state3" countTo="3000">0</span>+</h1>
                   <h5 class="mt-3">服務客戶人數</h5>
                   <p class="text-sm"></p>
                 </div>
@@ -222,7 +222,7 @@
           </div>
         </div>
       </div>
-      <div class="container">
+      <div class="container" style="display:none;">
         <div class="row">
           <div class="col-md-8 mx-auto text-center">
             <h6 class="text-gradient text-warning">Coinsha</h6>
