修改coinsha為COINSHA，地圖改為標示地標而非地址

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/apple-icon.png">
   <link rel="icon" type="image/png" href="./assets/img/Logo_img.jpg">
   <title>
-    Coinsha
+    COINSHA
   </title>
   <!--     Fonts and icons     -->
   <link rel="stylesheet" type="text/css"
@@ -33,10 +33,10 @@
         <nav class="navbar navbar-expand-lg  blur border-radius-xl top-0 z-index-fixed shadow position-absolute my-3 py-2 start-0 end-0 mx-4">
           <div class="container-fluid px-0">
             <a class="navbar-brand font-weight-bolder ms-sm-3  d-none d-md-block"  rel="tooltip" title="Designed and Coded by Creative Tim" data-placement="bottom" target="_blank">
-              Coinsha
+              COINSHA
             </a>
             <a class="navbar-brand font-weight-bolder ms-sm-3  d-block d-md-none"  rel="tooltip" title="Designed and Coded by Creative Tim" data-placement="bottom" target="_blank">
-              Coinsha
+              COINSHA
             </a>
             <a href="https://line.me/R/ti/p/%40anz4974i" style="background-image: linear-gradient(195deg, #f6ff51f3 0%, #ffcd4f 100%);color:black;" class="btn btn-sm  bg-gradient-primary  mb-0 ms-auto d-lg-none d-block">我要買幣</a>
             <button class="navbar-toggler shadow-none ms-md-2" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
@@ -94,7 +94,7 @@
           <div class="row">
             <div class="col-lg-6 col-md-7 d-flex justify-content-center flex-column">
               <h1 class="text-white mb-4">專注於區塊鏈產業以及虛擬貨幣場外交易公司</h1>
-              <p class="text-white opacity-8 lead pe-5 me-5">「Coinsha 」夏和股份有限公司 
+              <p class="text-white opacity-8 lead pe-5 me-5">「COINSHA 」夏和股份有限公司 
                 成立於2018年初，我們是專門開發區塊鏈產業以及虛擬貨幣場外交易的公司
                 。團隊成員皆深深被區塊鏈所吸引，致力於讓更多人了解熟悉區塊鏈相關應用
                 ，我們提供定額定投，比特幣以太幣等等主流貨幣兌換，OTC場外交易，BTM等等服務
@@ -207,13 +207,13 @@
           <!--<div class="col-lg-6">-->
           <div class="col-md-6 col-10 d-flex justify-content-center flex-column mx-auto text-lg-start text-center">
             <h2 class="mb-4">關於我們</h2>
-            <p class="mb-2">Coinsha 夏和股份有限公司 成立於2018年初，一間專門開發區塊鏈產業以及虛擬貨幣場外交易的公司。</p>
+            <p class="mb-2">COINSHA 夏和股份有限公司 成立於2018年初，一間專門開發區塊鏈產業以及虛擬貨幣場外交易的公司。</p>
             <ul class="m-lg-2 m-auto">
               <li class="mb-2">你想了解區塊鏈產業，卻覺得資訊太複雜門檻太高嗎？</li>
               <li class="mb-2">你想投資虛擬貨幣，卻不知道如何入金與買賣嗎？</li>
               <li class="mb-2">你想投資虛擬貨幣以及區塊鏈興新產業，卻擔心碰到詐騙集團嗎？</li>
             </ul>
-            <p>Coinsha 提供一站式的服務，投資者只需要準備資金，我們將會幫你解決之後全部複雜繁瑣的流程，幫您把台幣(法幣)以最優惠的價格兌換為您想要的虛擬貨幣。
+            <p>COINSHA 提供一站式的服務，投資者只需要準備資金，我們將會幫你解決之後全部複雜繁瑣的流程，幫您把台幣(法幣)以最優惠的價格兌換為您想要的虛擬貨幣。
               不用再擔心自己花了錢與時間還不會購買，我們團隊提供投資者最簡單最輕鬆且安全合法的方式。</p>
           </div>
           <div class="col-lg-4 ms-auto mt-lg-0 mt-4" style="overflow: hidden;">
@@ -225,7 +225,7 @@
       <div class="container" style="display:none;">
         <div class="row">
           <div class="col-md-8 mx-auto text-center">
-            <h6 class="text-gradient text-warning">Coinsha</h6>
+            <h6 class="text-gradient text-warning">COINSHA</h6>
             <h2>團隊成員</h2>
           </div>
         </div>
@@ -281,7 +281,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 ms-auto me-auto text-center">
-            <h3>Coinsha 服務流程</h3>
+            <h3>COINSHA 服務流程</h3>
           </div>
         </div>
         <div class="row mt-5">
@@ -350,7 +350,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 ms-auto me-auto text-center">
-            <h3>Coinsha 團隊優勢</h3>
+            <h3>COINSHA 團隊優勢</h3>
           </div>
         </div>
         <div class="row align-items-center">
@@ -448,8 +448,10 @@
           </div>
         </div>
         <div class="row align-items-center">
+          <!--
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28918.10625489307!2d121.5608076571777!3d25.042106260647962!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442abe5f25721e7%3A0x538e74d23ceaac56!2zMTA15Y-w5YyX5biC5p2-5bGx5Y2A5rCR55Sf5p2x6Lev5LiJ5q61MTMx6Jmf!5e0!3m2!1szh-TW!2stw!4v1654422061850!5m2!1szh-TW!2stw" width="1200" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-      
+          -->
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3614.2939622002273!2d121.54549741544726!3d25.058023843481006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442ab80d35fddb9%3A0x196cfbfef399b8d0!2sCOINSHA!5e0!3m2!1szh-TW!2stw!4v1654698376416!5m2!1szh-TW!2stw" width="1200" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         </div>
     </section>
@@ -516,7 +518,7 @@
               <div class="ms-4">
                 <h4>Youtube連結</h4>
                 <p>
-                  Coinsha 場外交易最佳夥伴 - YouTube
+                  COINSHA 場外交易最佳夥伴 - YouTube
                 </p>
               </div>
             </div>
@@ -558,7 +560,7 @@
       <div class=" row">
         <div class="col-md-3 mb-4 ms-auto">
           <div>
-            <h6 class="font-weight-bolder mb-4">Coinsha</h6>
+            <h6 class="font-weight-bolder mb-4">COINSHA</h6>
           </div>
           <div>
             <ul class="d-flex flex-row ms-n3 nav">
@@ -593,7 +595,7 @@
         <div class="col-12">
           <div class="text-center">
             <p class="text-dark my-4 text-sm font-weight-normal">
-              Coinsha ©
+              COINSHA ©
               <script>
                 document.write(new Date().getFullYear())
               </script>
