--- a/index.html
+++ b/index.html
@@ -63,11 +63,12 @@
                     服務
                   </a>
                 </li>
+                <!--
                 <li class="nav-item">
                   <a class="nav-link text-black" href="#feedback">
                     用戶反饋
                   </a>
-                </li>
+                </li>-->
                 <li class="nav-item">
                   <a class="nav-link text-black" href="#contact">
                     聯絡我們
@@ -143,6 +144,7 @@
           </div>
         </div>
         <div class="row">
+          <!--
           <div class="col-md-10 ms-auto me-auto">
             <div class="card card-plain card-blog mt-5">
               <div class="row">
@@ -172,7 +174,7 @@
                 </div>
               </div>
             </div>
-
+-->
             <div class="card card-plain card-blog mt-5">
               <div class="row">
                 <div class="col-md-4">
@@ -379,7 +381,7 @@
                   <img style="height: 50px;width: 50px;max-width: max-content;" src="assets/img/團隊優勢＿3.png"
                     alt="img-blur-shadow" class="img-fluid shadow border-radius-lg">
                   <h5>3.最安全的資金風險控管</h5>
-                  <p>這邊放配合的業務層面的相關文字敘述..........</p>
+                  <p>相較於其他場內交易所，我們不會持有或代管您的資金或是錢包權限，資金權限皆在您的手上。</p>
                 </div>
               </div>
               <div class="col-md-6">
@@ -387,7 +389,7 @@
                   <img style="height: 50px;width: 50px;max-width: max-content;" src="assets/img/團隊優勢＿4.png"
                     alt="img-blur-shadow" class="img-fluid shadow border-radius-lg">
                   <h5>4.合法經營</h5>
-                  <p>這邊放配合的律師事務所相關文字敘述..........</p>
+                  <p>與多個法律以及反洗錢事務所合作 <br/>E.g 畢卡所國際反洗錢事務所 , 拉斐爾國際法律事務所 ， 亞細亞國際法律事務所。</p>
                 </div>
               </div>
             </div>
@@ -406,7 +408,7 @@
       </div>
     </section>
     <!-- END Section with four info areas left & one card right with image and waves -->
-
+    <!--
     <section class="py-6" id="feedback">
       <div class="container">
         <div class="row">
@@ -438,7 +440,7 @@
         </div>
       </div>
     </section>
-
+    -->
     <section class="py-5" id="mapp">
       <div class="container">
         <div class="row">
@@ -497,7 +499,7 @@
             <div class="p-3 info-horizontal d-flex">
               <div class="icon me-3">
                 <a href="https://line.me/R/ti/p/%40anz4974i">
-                  <img style="height: 50px;width: 50px;max-width: max-content;" src="assets/img/instagram.png"
+                  <img style="height: 50px;width: 50px;max-width: max-content;" src="assets/img/LINE1.png"
                     alt="img-blur-shadow" class="img-fluid shadow border-radius-lg">
                 </a>
               </div>
@@ -569,11 +571,12 @@
                   <i class="fab fa-facebook text-lg opacity-8"></i>
                 </a>
               </li>
+              <!--
               <li class="nav-item">
                 <a class="nav-link pe-1" href="https://www.instagram.com/" target="_blank">
                   <i class="fab fa-instagram text-lg opacity-8"></i>
                 </a>
-              </li>
+              </li>-->
               <li class="nav-item">
                 <a class="nav-link pe-1" href="https://youtube.com/channel/UCq8OV-lVnGOCFXiH24wFhBg"
                   target="_blank">
