修改錯誤文字

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                   <img style="height: 50px;width: 50px;max-width: max-content;" src="assets/img/團隊優勢＿1.png"
                     alt="img-blur-shadow" class="img-fluid shadow border-radius-lg">
                   <h5>1.報價機器人服務</h5>
-                  <p>在虛擬貨幣市場，瞬息萬變的行情波動，Coinhsa團隊提供客製化報價機器人，在你規定之價格以及特定情況下，即時傳訊息或打電話通知您。</p>
+                  <p>在虛擬貨幣市場，瞬息萬變的行情波動，COINSHA團隊提供客製化報價機器人，在你規定之價格以及特定情況下，即時傳訊息或打電話通知您。</p>
                 </div>
               </div>
               <div class="col-md-6">
