--- a/qrUrl/qr1.html
+++ b/qrUrl/qr1.html
@@ -7,7 +7,7 @@
 
 <body class="presentation-page bg-gray-200">
   <script>
-    window.location.href = "https://www.facebook.com/";
+    window.location.href = "比特幣提款機.pdf";
   </script>
     
 </body>
