--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
   .spanHead{
     display:flex;
   }
+  .aHead{
+    display: block;
+  }
 }
 
 @media  (min-width: 992px) { 
@@ -39,6 +42,9 @@
   }
   .spanHead{
     display: none;
+  }
+  .aHead{
+    display: none !important;
   }
 }
 
@@ -121,12 +127,12 @@
       <div class="col-12">
         <nav class="navbar navbar-expand-lg  blur border-radius-xl top-0 z-index-fixed shadow position-absolute my-3 py-2 start-0 end-0 mx-4">
           <div class="container-fluid px-0">
-            <!-- <a class="navbar-brand font-weight-bolder ms-sm-3  d-none d-md-block"  rel="tooltip" title="" data-placement="bottom" target="_blank" style="color: #731d04">
+            <a class="aHead navbar-brand font-weight-bolder ms-sm-3  d-none d-md-block"  rel="tooltip" title="" data-placement="bottom" target="_blank" style="color: #731d04">
               CTcoin
             </a>
-            <a class="navbar-brand font-weight-bolder ms-sm-3  d-block d-md-none"  rel="tooltip" title="" data-placement="bottom" target="_blank" style="color: #731d04">
+            <a class="aHead navbar-brand font-weight-bolder ms-sm-3  d-block d-md-none"  rel="tooltip" title="" data-placement="bottom" target="_blank" style="color: #731d04">
               CTcoin
-            </a> -->
+            </a>
             <button class="navbar-toggler shadow-none ms-md-2" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon mt-2">
                 <span class="navbar-toggler-bar bar1"></span>
